# picoeco

./: 6854_emulation_notes.txt  CMakeLists.txt  LICENSE  README.md  econet.pio  econet_ll.c  ecotest.c
boards/: bus1mhz_proto.h  bus1mhz_rp2040.h
ecotest/: CMakeLists.txt  board_specific.c  board_specific.h  bus1mhz.c  bus1mhz.h  bus1mhz_muxed.pio  bus1mhzproto.pio  crc16.c  crc16.h  econet.pio  econet_hl.c  econet_hl.h  econet_ll.c  econet_ll.h  ecotest.c  emu6854.c  emu6854.h  fs.c  fs.h  timers.c
ecotest/boards/: bus1mhz_proto.h  eco_skt_box.h
netmon/: CMakeLists.txt  crc16.h  econet_ll.c  econet_ll.h  netmon.c  netmon.pio
